# sudoku-solver-3

./: Cargo.toml  gen_num_lookup.py
converted/: easy_0_puzzle.txt  easy_10_puzzle.txt  easy_10_solution.txt  easy_11_puzzle.txt  easy_11_solution.txt  easy_12_puzzle.txt  easy_12_solution.txt  easy_13_puzzle.txt  easy_13_solution.txt  easy_14_puzzle.txt  easy_14_solution.txt  easy_1_puzzle.txt  easy_2_puzzle.txt  easy_3_puzzle.txt  easy_4_puzzle.txt  easy_5_puzzle.txt  easy_5_solution.txt  easy_6_puzzle.txt  easy_6_solution.txt  easy_7_puzzle.txt  easy_7_solution.txt  easy_8_puzzle.txt  easy_8_solution.txt  easy_9_puzzle.txt  easy_9_solution.txt  hard_0_puzzle.txt  hard_10_puzzle.txt  hard_10_solution.txt  hard_11_puzzle.txt  hard_11_solution.txt  hard_12_puzzle.txt  hard_13_puzzle.txt  hard_14_puzzle.txt  hard_1_puzzle.txt  hard_2_puzzle.txt  hard_2_solution.txt  hard_3_puzzle.txt  hard_3_solution.txt  hard_4_puzzle.txt  hard_4_solution.txt  (+65 more)
data/: sudoku.txt  sudoku2.txt
src/: board.rs  main.rs  solution.rs  solver.rs  util.rs
